objects/Network_Optimization__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Network Optimizations</relationshipLabel>
        <relationshipName>Network_Optimizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary Report Account</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>TEXT(Performance_Report__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Performance_Report__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Report__c</fullName>
        <description>The related performance report</description>
        <inlineHelpText>The related performance report</inlineHelpText>
        <label>Performance Report</label>
        <referenceTo>Performance_Analysis__c</referenceTo>
        <relationshipLabel>Network Optimizations</relationshipLabel>
        <relationshipName>Network_Optimizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>Network Optimizations for Performance Analysis</description>
    <label>Network Optimization</label>
    <nameField>
        <displayFormat>NOPT-{000000}</displayFormat>
        <label>Network Optimizations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Optimizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Performance_Analysis</fullName>
        <active>true</active>
        <description>For auto performance analysis.</description>
        <label>Performance Analysis</label>
    </recordTypes>
</CustomObject>